# Pred-Sus-Act

./: EDA.ipynb  Feature_Engineering.ipynb  LASSO_feature_selection.ipynb  MODELS.ipynb  Models.ipynb  Osama_Models.ipynb  README.md  Sampling.ipynb  Update_Trials.ipynb  data\KMeansSMOTE.csv  delivery-notebook.ipynb  eda.ipynb  pyproject.toml  youssef_notebook.ipynb
.ipynb_checkpoints/: Models-checkpoint.ipynb  delivery-notebook-youssef-ver-checkpoint.ipynb  eda-checkpoint.ipynb
Phase 1/: EDA.ipynb  LASSO_feature_selection.ipynb  Models.ipynb
data/: KMeansSMOTE.csv  KMeansSMOTE_Reduced.csv  chosen_features.csv  models_Reports_WareHouse.db  models_reports.db  smoten_grid_search_results.csv
data/original/: LASSO_selected_features.csv  reduced_data.csv
data/processed/: selected_features.json
data_2/csai-253-project-phase-2/best_submission/: submission.csv
notebooks/: Models_Training.ipynb  Preprocessing.ipynb
