[project]
name = "pred-sus-act"
version = "0.1.0"
description = ""
authors = [
    {name = "Youssef Mohammad",email = "s-youssef.hameid@zewailcity.edu.eg"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic (>=2.11.0,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "cython (>=3.0.12,<4.0.0)",
    "polars (>=1.26.0,<2.0.0)",
    "nupy (>=0.1.1,<0.2.0)",
    "numba (>=0.61.0,<0.62.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


package-mode = false