[tool.poetry]
name = "pred-sus-act"
version = "0.1.0"
description = ""
authors = ["Youssef Mohammad <s-youssef.hameid@zewailcity.edu.eg>"]
readme = "README.md"
package-mode = false  #only dependency management

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pydantic = ">=2.11.0,<3.0.0"
seaborn = ">=0.13.2,<0.14.0"
tqdm = ">=4.67.1,<5.0.0"
cython = ">=3.0.12,<4.0.0"
polars = ">=1.26.0,<2.0.0"
nupy = ">=0.1.1,<0.2.0"
numba = ">=0.61.0,<0.62.0"
dotenv = ">=0.9.9,<0.10.0"
strip-markdown = ">=1.3,<2.0"
pyjanitor = ">=0.31.0,<0.32.0"
ydata-profiling = "^4.16.1"
ipywidgets = "^8.1.5"
jsonschema = "^4.23.0"
altair = "5.5.0"
vegafusion = "^2.0.2"
vl-convert-python = "^1.7.0"
pygwalker = "^0.4.9.14"
scipy = "^1.15.2"
scikit-learn = "^1.6.1"
umap-learn = "^0.5.7"
imblearn = "^0.0"
cuda-python = "^12.8.0"
jupyter = "^1.1.1"
jupyterlab = "^4.4.0"
jupyter-server = "^2.15.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
